--- a/css/main.css
+++ b/css/main.css
@@ -60,18 +60,41 @@ header {
     background: var(--secondary-color);
     color: white;
     padding: 1rem 0;
-    text-align: center;
+    /* text-align: center; */
     /* position: absolute; */
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
+ .stripe {
+     position: relative;
+     
+
+ }
+.stripe::after{
+    position: absolute; /* Allows us to manipulate the position of the ::after element */
+    content: ""; /* Without this property the ::after element will not exist!! */
+    width: 100%; /* Sets the width to be the same size as the span */
+    height: 10px;  /* Sets the height to be more than 0, so we ca nsee the element */
+    right: 0; /* Aligns the right edge of the ::after to the right edge of the span */
+    bottom: 10px; /* Aligns the bottom edge of the ::after to be 10 pixels above the bottom of the span */
+    background:#09639d; 
+
+    z-index: -1; 
+}  
+    
+
 
 header h1 {
     font-family: 'Playfair Display', serif;
     position: relative;
     display: inline-block;
+    margin: auto
 }
 
+header h1 .system {
+    /* color: var(--primary-color); */
+    background-color: #2c689f;
+}
 header h1::after {
     content: '';
     /* position: absolute; */
@@ -87,17 +110,20 @@ p .tagline{
     position: absolute;
     top: 5rem;
     left: 50px;
+    font-size: 10px;
 
 }
 
 nav ul {
     list-style: none;
     padding: 0;
+    margin: auto;
 }
 
 nav ul li {
     display: inline;
     margin: 0 15px;
+    /* margin: auto; */
 }
 
 nav ul li a {
@@ -110,6 +136,9 @@ nav ul li a {
     background-color: #2c689f;
     border-radius: 20px;
     padding: 5px 10px;
+}
+.nav-list{
+    /* padding: auto; */
 }
     
 
@@ -132,6 +161,8 @@ nav ul li a {
     color: var(--primary-color);
     /* left: 16px; */
     padding: 1rem;
+    font-size: 1rem;
+
 
     
     
@@ -149,7 +180,8 @@ nav ul li a {
     /* background-color: var(--secondary-color); */
     border-radius: 15px;
     /* /* height: auto; */
-     animation: zoom 5s infinite; 
+     animation: zoom 5s infinite ease-in-out alternate; 
+     display: block;
     /* object-fit: cover; */
     /* position:absolute;
     top: 100px; */
@@ -175,14 +207,16 @@ nav ul li a {
 
 .locals-section {
     padding: 2rem;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .locals-section h2 {
     font-size: 1.2rem;
     margin-bottom: 1rem;
     color: var(--primary-color);
+    margin: auto;
 }
+
 
 .grid-container {
     display: grid;
@@ -217,6 +251,7 @@ nav ul li a {
 } 
 
 .learn-more:hover {
+    background-color: #2c689f;
     transform: translateY(-5px);
     /* background-color:  */
 }
@@ -231,6 +266,12 @@ nav ul li a {
     transition: transform 0.3s ease;
     padding: 0.1rem 0.9rem;
 }
+.learn-more-1:hover {
+    background-color:#2c689f;
+    transform: translateY(-5px);
+    /* background-color:  */
+}
+
 .learn-more-2 {
     background-color: #2c689f;
     color: var(--primary-color);
@@ -239,6 +280,11 @@ nav ul li a {
     /* transition: transform 0.3s ease; */
     /* padding: 0.1rem 0.9rem; */
     /* margin-top: 5rem; */
+}
+.learn-more-2:hover {
+    background-color:#90105f;
+    transform: translateY(-5px);
+    /* background-color:  */
 }
    
 
