--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -8,8 +7,8 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    background-color: #fff; 
-    color: #000; 
+    background-color: #fff;
+    color: #000;
 }
 
 h1 {
@@ -19,43 +18,43 @@ h1 {
 }
 
 /* Desktop View */
+
+/* Header-section */
 #header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black; 
+    background-color: black;
     padding: 1rem;
 }
 
 #header-title {
     font-size: 2rem;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 
 #header-title .highlight {
     position: relative;
     display: inline-block;
-    font-weight: bold;  
-    z-index: 1;  
+    font-weight: bold;
+    z-index: 1;
 }
 
 
 #header-title .highlight::before {
     content: "";
     position: absolute;
-    left: 50%; 
-    top: 50%;  
-    transform: translate(-50%, -50%);  
-    width: 80%;  
-    height: 13px;  
-    background-color: #2c689f;  
-    z-index: -1;  
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 13px;
+    background-color: #2c689f;
+    z-index: -1;
 }
 
-
-
-
+/* Navigation-section */
 
 #nav-links ul {
     list-style-type: none;
@@ -68,84 +67,83 @@ h1 {
     color: #fff;
     font-weight: bold;
     font-size: 1.2rem;
-    transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease, border 0.3s ease; /* Added background and border transitions */
-    padding: 8px 16px; 
-    border-radius: 12px; 
+    transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease, border 0.3s ease;
+    /* Added background and border transitions */
+    padding: 8px 16px;
+    border-radius: 12px;
     display: inline-block;
 }
 
 #nav-links a:hover {
     transform: scale(1.1);
-    color: #2c77aa;  
-    background-color: rgba(44, 119, 170, 0.1); 
-    border: 2px solid #2c77aa; 
+    color: black;
+    background-color: rgb(13, 221, 232);
+    /* border: 2px solid #2c77aa; */
     transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease, border 0.3s ease;
+    animation: hoverAnimation 0.4s ease-in-out;
 }
+/* Animation for the hover effect */
 
- 
 @keyframes hoverAnimation {
     0% {
         transform: scale(1);
         opacity: 1;
     }
+
     50% {
         transform: scale(1.2);
         opacity: 0.7;
     }
+
     100% {
         transform: scale(1.1);
         opacity: 1;
     }
 }
 
-#nav-links a:hover {
-    animation: hoverAnimation 0.4s ease-in-out;  
-}
-
-
-
-
 #intro {
     width: 100%;
     height: 80vh;
     position: relative;
-    overflow: hidden;  
+    overflow: hidden;
 }
 
-
+/* Intro-section */
 #intro {
     width: 100%;
     height: 80vh;
     position: relative;
-    overflow: hidden;   
+    overflow: hidden;
 }
 
 /* Default state for the intro image */
 #intro-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;  
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
     opacity: 1;
-    animation: zoom 8s infinite ease-in-out alternate; 
+    animation: zoom 8s infinite ease-in-out alternate;
 }
 
-/* Zoom-out animation */
+/* Zoom-out animation for the intro image */
 @keyframes zoom {
     from 0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
     }
+
     to 100% {
-        transform: scale(1); 
+        transform: scale(1);
     }
 }
 
-
+/* Intro-section */
 #intro {
     width: 100%;
     height: 80vh;
@@ -155,7 +153,7 @@ h1 {
 #intro-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; 
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -170,7 +168,6 @@ h1 {
 }
 
 #intro-text {
-    font-size: 1.5rem;
     font-weight: bold;
 }
 
@@ -181,8 +178,8 @@ h1 {
 }
 
 .highlight-text {
-    color: #2c77aa; 
-    animation: fadeInUp 1.5s ease-out; 
+    color: #2c77aa;
+    animation: fadeInUp 1.5s ease-out;
 }
 
 #intro-description {
@@ -194,21 +191,23 @@ h1 {
 @keyframes fadeInUp {
     0% {
         opacity: 0;
-        transform: translateY(30px); 
+        transform: translateY(30px);
     }
+
     100% {
         opacity: 1;
-        transform: translateY(0); 
+        transform: translateY(0);
     }
 }
 
-
+/* Planets-section */
 #planets-section {
     width: 100%;
     padding: 3rem;
     background-color: black;
     color: white;
 }
+
 #meet-locals h3 {
     text-align: left;
     font-size: 2.5rem;
@@ -234,13 +233,13 @@ h1 {
     flex-wrap: nowrap;
     margin-top: 2rem;
 }
-
+/* Planet Cards */
 .planet {
     text-align: center;
     margin: 0 5px;
-    flex: 0 0 16%;  
+    flex: 0 0 16%;
     position: relative;
-    overflow: hidden;  
+    overflow: hidden;
 }
 
 /* Adding the fade-in/fade-out effect */
@@ -250,12 +249,12 @@ h1 {
     max-width: 100%;
     display: block;
     margin-bottom: 0.5rem;
-    transition: opacity 0.5s ease; 
+    transition: opacity 0.5s ease;
 }
 
 /* Fade-in/fade-out effect on hover */
 .planet:hover img {
-    opacity: 0.7; 
+    opacity: 0.7;
 }
 
 .planet-name {
@@ -268,31 +267,32 @@ h1 {
 .learn-more-btn {
     background-color: #90105f;
     color: white;
-    padding: 10px;
+    padding: 5px 10px;
     border: none;
     cursor: pointer;
     font-size: 1rem;
     text-align: center;
-    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s ease; /* Animation for color, scale, and shadow */
-    border-radius: 10%;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s ease;
+    /* Animation for color, scale, and shadow */
+    border-radius: 15px;
 }
 
 .learn-more-btn:hover {
-    background-color: #2c77aa; 
-    transform: translateY(-5px); 
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
+    background-color: #2c77aa;
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .learn-more-btn:active {
-    transform: translateY(2px); 
+    transform: translateY(2px);
 }
 
 
-/* Footer Styles */
+/* Footer Section */
 #footer {
     background-color: black;
     color: white;
-    text-align: center; 
+    text-align: center;
     padding: 1rem;
     width: 100%;
     box-sizing: border-box;
@@ -301,22 +301,22 @@ h1 {
 /* Styling the Horizontal Line */
 #footer hr {
     border: 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.3); 
-    width: 80%; 
-    margin: 0 auto; 
-    filter: brightness(0.8); 
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    width: 80%;
+    margin: 0 auto;
+    filter: brightness(0.8);
 }
 
 /* Footer text styling */
 #footer p {
-    text-align: center; 
-    color: white; 
-    font-size: 1rem; 
+    text-align: center;
+    color: white;
+    font-size: 1rem;
     margin-top: 10px;
 }
 
 
-/* --------- Tablet View --------- */
+/*  Tablet View  */
 @media screen and (max-width: 900px) {
     #header {
         padding: 2rem 1rem;
@@ -327,14 +327,14 @@ h1 {
 
     #header-title {
         font-size: 2.5rem;
-        margin-bottom: 20px; 
+        margin-bottom: 20px;
     }
 
     #nav-links ul {
         display: flex;
         justify-content: center;
-        gap: 20px; 
-        width: 100%; 
+        gap: 20px;
+        width: 100%;
     }
 
     #nav-links a {
@@ -382,7 +382,7 @@ h1 {
 
     #planets-container {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr; 
+        grid-template-columns: 1fr 1fr 1fr;
         gap: 1.5rem;
     }
 
@@ -410,7 +410,7 @@ h1 {
 
     #footer hr {
         margin-top: 1rem;
-        width: 80%; 
+        width: 80%;
     }
 
     #footer p {
@@ -418,14 +418,14 @@ h1 {
     }
 }
 
-/* --------- Mobile View--------- */
+/* Mobile View */
 
 @media screen and (max-width: 400px) {
     #header {
         padding: 2rem 1rem;
         flex-direction: column;
         align-items: center;
-        text-align: center; 
+        text-align: center;
     }
 
     #header-title {
@@ -436,8 +436,8 @@ h1 {
     #nav-links ul {
         display: flex;
         justify-content: center;
-        gap: 20px; 
-        width: 100%; 
+        gap: 20px;
+        width: 100%;
     }
 
     #nav-links a {
@@ -446,34 +446,34 @@ h1 {
 
     /* Adjustments for mobile */
     #intro {
-        height: 50vh; 
-        padding-top: 2rem; 
+        height: 50vh;
+        padding-top: 2rem;
     }
 
     #intro-text-container {
-        font-size: 1rem; 
+        font-size: 1rem;
     }
 
     #intro-text {
-        font-size: 1.3rem; 
+        font-size: 1.3rem;
     }
 
     #intro-heading,
     #intro-heading2 {
-        font-size: 1.7rem; 
+        font-size: 1.7rem;
     }
 
     #intro-description {
-        font-size: 1rem; 
+        font-size: 1rem;
     }
 
     #meet-locals h3 {
         text-align: center;
-        font-size: 2rem;  
+        font-size: 2rem;
     }
 
     #planets-container {
-        display: block; 
+        display: block;
         margin: 0 auto;
     }
 
@@ -484,9 +484,9 @@ h1 {
     }
 
     .planet img {
-        width: 110%;  
+        width: 110%;
         max-width: 250px;
-        margin-left: 10%;  
+        margin-left: 10%;
     }
 
     .planet-name {
@@ -498,16 +498,17 @@ h1 {
         width: 100%;
         font-size: 1rem;
 
-    border-radius: 10px;
-    width: 35%;
+        border-radius: 50px;
+        width: 35%;
     }
+
     #footer {
         padding: 1rem;
     }
 
     #footer hr {
         margin-top: 1rem;
-        width: 80%; 
+        width: 80%;
     }
 
     #footer p {
